syntax = "proto3";

// import "common.proto"; // 导入失败了

package miniomanageserver;

// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./miniomanageserver";


message PutFileUploaderRequest {
    string bucketName = 1;
    string objectPre = 2;
    string filePath = 3;
}
  
message PutFileUploaderResponse {
    string bucket_filepath = 2;
}


message PutFileUploaderByteRequest {
    string bucketName = 1;
    string objectPre = 2;
    string filePath = 3;
}
  
message PutFileUploaderByteResponse {
    string bucket_filepath = 2;
}

message GetFileDownloaderRequest {
}

message GetFileDownloaderResponse {
    string bucket_filepath = 2;
}

// 获取Minio视频播放的URLRequest
message GetPlayUrlRequest {
    string playUrl = 1; // 想要转换的URL
}

// 获取Minio视频播放的URLResponse
message GetPlayUrlResponse {
    string resPlayUrl = 2;  // 实际的URL
}
  
service MinioManageServer {
    // 文件上传
    rpc PutFileUploader(PutFileUploaderRequest) returns(PutFileUploaderResponse);

    // byte形式文件上传
    rpc PutFileUploaderByte(PutFileUploaderByteRequest) returns(PutFileUploaderByteResponse);

    // 文件下载
    rpc GetFileDownloader(GetFileDownloaderRequest) returns(GetFileDownloaderResponse);

    // 获取Minio视频播放的URL
    rpc GetPlayUrl(GetPlayUrlRequest) returns(GetPlayUrlResponse);
}