syntax = "proto3";

package mysqlmanageserver;
  
// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./mysqlmanageserver";
  
message UserLoginRequest {
    string username = 1;
    string password = 2;
}

message UserLoginResponse {
    int64 userId = 1;
}

message UserRegisterRequest {
    string username = 1;
    string password = 2;
}

message UserRegisterResponse {
    int64 userId = 1;
}

message User_inf {
    Users users = 1;
    bool isFollow = 2;
}

message Users {
    int64 userId = 1;
    string userNickName = 2;
    int64 followCount = 3;
    int64 followerCount = 4;
}

message CheckUserInfRequest {
    int64 userId = 1;
    int64 followerId = 2;
}

message CheckUserInfResponse {
    User_inf user = 1;
}

message CheckIsFollowRequest {
    int64 userId = 1;
    int64 followerId = 2;
}

message CheckIsFollowResponse {
    bool ok = 1;
}

message IsFavotiteRequest {
    int64 userId = 1;
    int64 videoId = 2;
}

message IsFavotiteResponse {
    bool ok = 1;
}

message VideoInfo {
    int64 videoId = 1;       
	int64 authorId = 2;      
	string playUrl = 3;       
	string coverUrl = 4;  
	int64 favoriteCount = 5; 
	int64 commentCount = 6;
	bool isFavotite = 7; 
	string videoTitle = 8;
}

message GetVideoListRequest {
    int64 authorId = 1;
    int64 userId = 2;
}

message GetVideoListResponse {
    repeated VideoInfo videoInfo = 1;
}

message VideoNumRequest {
    int64 authorId = 1;
}

message VideoNumResponse {
    int64 num = 1;
}
  

message RelationActionRequest{
    int64 UserID =1;
    int64 ToUserID =2;
    int32 ActionType =3;
}
message RelationActionResponse{
    bool ok=1;
}
message RelationFollowerListRequest{
    int64 LoginUserID = 1;
    int64 UserID = 2;
}
message RelationFollowerListResponse{
    repeated RelationUser RelationUser = 1;
}
message RelationFollowListRequest{
    int64 LoginUserID = 1;
    int64 UserID = 2;
}
message RelationFollowListResponse{
    repeated RelationUser RelationUser = 1;
}

message RelationUser  {
    int64 Id            =1;
    string Name         =2;
    int64 FollowCount   =3;
    int64 FollowerCount =4;
    bool IsFollow       =5;
}

message FavoriteVideoNumRequest {
    int64 userID = 1;
}

message FavoriteVideoNumResponse {
    int64 n = 1;
}

message GetFavoriteVideoListRequest {
    int64 userID = 1;
}

message GetFavoriteVideoListResponse {
    repeated VideoInfo videoInfo = 1;
}

message AddVideoFavoriteRequest {
    int64 userID = 1;
    int64 videoID = 2;
}

message AddVideoFavoriteResponse {
    int64 ok = 1;
}

message SubVideoFavoriteRequest {
    int64 userID = 1;
    int64 videoID = 2;
}

message SubVideoFavoriteResponse {
    int64 ok = 1;
}


service MySQLManageServer {

    // 用户登陆校验
    rpc UserLogin(UserLoginRequest) returns(UserLoginResponse);
    // 用户注册
    rpc UserRigster(UserRegisterRequest) returns(UserRegisterResponse);

    // 获得用户信息
    rpc CheckUserInf(CheckUserInfRequest) returns(CheckUserInfResponse);
    // 是否关注
    rpc CheckIsFollow(CheckIsFollowRequest) returns(CheckIsFollowResponse);
    // 是否点赞
    rpc IsFavotite(IsFavotiteRequest) returns(IsFavotiteResponse);
    // 发布列表视频信息
    rpc GetVideoList(GetVideoListRequest) returns(GetVideoListResponse);
    // 发布列表视频数量
    rpc VideoNum(VideoNumRequest) returns(VideoNumResponse);


    //关注、取消关注
    rpc RelationAction(RelationActionRequest) returns(RelationActionResponse);
    //粉丝列表
    rpc RelationFollowerList(RelationFollowerListRequest) returns(RelationFollowerListResponse);
    //关注列表
    rpc RelationFollowList(RelationFollowListRequest) returns(RelationFollowListResponse);
    

    //喜欢视频数量
    rpc FavoriteVideoNum(FavoriteVideoNumRequest) returns(FavoriteVideoNumResponse);
    //获取喜欢列表
    rpc GetFavoriteVideoList(GetFavoriteVideoListRequest) returns(GetFavoriteVideoListResponse);
    //点赞
    rpc AddVideoFavorite(AddVideoFavoriteRequest) returns(AddVideoFavoriteResponse);
    //取消点赞
    rpc SubVideoFavorite(SubVideoFavoriteRequest) returns(SubVideoFavoriteResponse);
}